homevent (0.2.9) unstable; urgency=low

  * Onwards.
  * Add averaging handler.
  * Add time-slot handler.
  * Make twisted-conch (recommended but) optional.

 -- Matthias Urlichs <matthias@urlichs.de>  Tue, 22 Jan 2008 16:44:17 +0100

homevent (0.2.8) stable; urgency=low

  * Extended audio flow stuff to be parameterizable beyond reason.
  * wait NAME: for TIME
    instead of
    wait for TIME: name NAME
  * Rearrange FS20 device registration.
  * Register FS20 EM devices instead of un-named events.

 -- Matthias Urlichs <matthias@urlichs.de>  Wed, 16 Jan 2008 09:13:26 +0100

homevent (0.2.6.1) stable; urgency=low

  * net bugfix

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 06 Jan 2008 04:22:03 +0100

homevent (0.2.6) stable; urgency=low

  * Add a flag to force reporting Python stack traces
    … including a traceback on the code reporting the error.
  * Make sure event handlers match on numbers.
  * Add "less" and "greater" checks in addition to "equal".
  * Fix context concatenation order
    event parameters picked up values from their caller
    instead of their own parameters
  * Logging for subsystems (like "onewire", for which I need it)
  * Support the 1wire/AAG wind vane
  * Show details on 1wire devices.
  * Send and receive "raw" FS20 data.
  * Support FS20 switches.
  * Fix stderr/stdout logging when starting HomEvenT
    via the Debian init script.
  * Implemented PortAudio interface.
  * Implement precise-interval "every N seconds" wait statements.
    … and export the timestamp as $wait.
  * Timer handling while testing is now deterministic
    so no more false negatives. Hopefully.
  * Allow net connections to use a multi-word name.
    Also renamed "disconnect net" to "del net"
    and "connect net" to just "net".

 -- Matthias Urlichs <matthias@urlichs.de>  Sat, 05 Jan 2008 10:58:16 +0100

homevent (0.2.5.6) stable; urgency=low

  * Class name nonsense.

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 03 Dec 2007 23:24:10 +0100
