@@ -1,11 +1,13 @@
 homevent (0.2.9) unstable; urgency=low
 
   * Onwards.
+  * Add a database back-end for storing state
+    based on the Storm ORM, with Twisted extension.
   * Add averaging handler.
   * Add time-slot handler.
   * Make twisted-conch (recommended but) optional.
 
- -- Matthias Urlichs <matthias@urlichs.de>  Tue, 22 Jan 2008 16:44:17 +0100
+ -- Matthias Urlichs <matthias@urlichs.de>  Sun, 27 Jan 2008 11:40:08 +0100
 
 homevent (0.2.8) stable; urgency=low
 
